Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignBoolObjBoolObjField.quorum
class Main
    Boolean v
    action Main
        v:SetValue(Test())
        if v:GetValue() = true
            output "passed"
        end
    end

    action Test() returns Boolean
        Boolean var
        var:SetValue(true)
        return var
    end
end