Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBooleanNumObjField.quorum
class Main
    boolean v = Test()
    action Main
    end

    action Test() returns boolean
        Number var
        var:SetValue(5.0)
        return var
    end
end